// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`chat 1`] = `
{
  "body": "{"model":"claude-3-5-sonnet-20241022","messages":[{"role":"system","content":"you are a helpful assistant"},{"role":"user","content":"hi"}]}",
  "headers": {
    "anthropic-version": "2023-06-01",
    "content-type": "application/json",
    "x-api-key": "<key>",
  },
  "method": "POST",
  "url": "https://api.anthropic.com/v1/messages",
}
`;

exports[`chat 2`] = `
{
  "body": "{"model":"llama3.2","messages":[{"role":"system","content":"you are a helpful assistant"},{"role":"user","content":"hi"}],"stream":false}",
  "headers": {},
  "method": "POST",
  "url": "http://localhost:11434/api/chat",
}
`;

exports[`chat 3`] = `
{
  "body": "{"messages":[{"role":"system","content":"you are a helpful assistant"},{"role":"user","content":"hi"}],"model":"gpt-4o-mini","temperature":0.5}",
  "headers": {
    "authorization": "Bearer <key>",
    "content-type": "application/json",
  },
  "method": "POST",
  "url": "https://api.openai.com/v1/chat/completions",
}
`;

exports[`dump 1`] = `
{
  "model": "claude-3-5-sonnet-20241022",
  "options": {
    "apiKey": "<key>",
  },
  "params": {
    "messages": [],
  },
  "provider": "anthropic",
  "type": "chat",
  "version": "0.2.4",
}
`;

exports[`dump 2`] = `
{
  "model": "llama3.2",
  "options": {},
  "params": {
    "messages": [],
  },
  "provider": "ollama",
  "type": "chat",
  "version": "0.2.4",
}
`;

exports[`dump 3`] = `
{
  "model": "gpt-4o-mini",
  "options": {
    "apiKey": "<key>",
  },
  "params": {
    "messages": [],
  },
  "provider": "openai",
  "type": "chat",
  "version": "0.2.4",
}
`;

exports[`json_object 1`] = `
{
  "body": "{"messages":[{"role":"user","content":"hi"}],"model":"gpt-4o-mini","response_format":{"type":"json_object"}}",
  "headers": {
    "authorization": "Bearer <key>",
    "content-type": "application/json",
  },
  "method": "POST",
  "url": "https://api.openai.com/v1/chat/completions",
}
`;

exports[`tool 1`] = `
{
  "body": "{"model":"claude-3-5-sonnet-20241022","messages":[{"role":"user","content":"What's the weather like in Boston today?"}],"tools":[{"type":"function","function":{"name":"get_current_weather","description":"Get the current weather in a given location","parameters":{"type":"object","properties":{"location":{"type":"string"},"unit":{"type":"string","enum":["celsius","fahrenheit"]}},"required":["location"],"additionalProperties":false,"$schema":"http://json-schema.org/draft-07/schema#"}}}]}",
  "headers": {
    "anthropic-version": "2023-06-01",
    "content-type": "application/json",
    "x-api-key": "<key>",
  },
  "method": "POST",
  "url": "https://api.anthropic.com/v1/messages",
}
`;

exports[`tool 2`] = `
{
  "body": "{"model":"llama3.2","messages":[{"role":"user","content":"What's the weather like in Boston today?"}],"tools":[{"type":"function","function":{"name":"get_current_weather","description":"Get the current weather in a given location","parameters":{"type":"object","properties":{"location":{"type":"string"},"unit":{"type":"string","enum":["celsius","fahrenheit"]}},"required":["location"],"additionalProperties":false,"$schema":"http://json-schema.org/draft-07/schema#"}}}],"stream":false}",
  "headers": {},
  "method": "POST",
  "url": "http://localhost:11434/api/chat",
}
`;

exports[`tool 3`] = `
{
  "body": "{"messages":[{"role":"user","content":"What's the weather like in Boston today?"}],"model":"gpt-4o-mini","tools":[{"type":"function","function":{"name":"get_current_weather","description":"Get the current weather in a given location","parameters":{"type":"object","properties":{"location":{"type":"string"},"unit":{"type":"string","enum":["celsius","fahrenheit"]}},"required":["location"],"additionalProperties":false,"$schema":"http://json-schema.org/draft-07/schema#"}}}]}",
  "headers": {
    "authorization": "Bearer <key>",
    "content-type": "application/json",
  },
  "method": "POST",
  "url": "https://api.openai.com/v1/chat/completions",
}
`;

exports[`jsonSchema 1`] = `
{
  "body": "{"model":"claude-3-5-sonnet-20241022","messages":[{"role":"user","content":"generate a person with name and age in json format"}]}",
  "headers": {
    "anthropic-version": "2023-06-01",
    "content-type": "application/json",
    "x-api-key": "<key>",
  },
  "method": "POST",
  "url": "https://api.anthropic.com/v1/messages",
}
`;

exports[`jsonSchema 2`] = `
{
  "body": "{"model":"llama3.2","messages":[{"role":"user","content":"generate a person with name and age in json format"}],"stream":false}",
  "headers": {},
  "method": "POST",
  "url": "http://localhost:11434/api/chat",
}
`;

exports[`jsonSchema 3`] = `
{
  "body": "{"messages":[{"role":"user","content":"generate a person with name and age in json format"}],"model":"gpt-4o-mini","response_format":{"type":"json_schema","json_schema":{"name":"person","schema":{"type":"object","properties":{"name":{"type":"string"},"age":{"type":"number"}},"required":["name","age"],"additionalProperties":false,"$schema":"http://json-schema.org/draft-07/schema#"}}}}",
  "headers": {
    "authorization": "Bearer <key>",
    "content-type": "application/json",
  },
  "method": "POST",
  "url": "https://api.openai.com/v1/chat/completions",
}
`;
